test/fail/import/trailing_slash.lly
#[
SyntaxError: Import path cannot end with '/'.
    from trailing_slash.lly:6
]#

import hello/
